<resources>
    <string name="app_name">Codia</string>
    <string name="signup">New member?<u> Sign up</u></string>
    <string name="forgotpw">Forgot password?</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_register">Register…</string>
    <string name="is_empty">Empty, Please enter the data!</string>
    <string name="invalid_email_format">Invalid Email format</string>
    <string name="least_6_characters">Password should be less than 6 characters!</string>
    <string name="least_6_characters_full_is_32">Display name should be less than 6 characters and more than 32 characters!</string>
    <string name="keep_me_sign_in">keep me sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dang_nhap_thanh_cong">Login successful</string>
    <string name="sign_up">Sign up</string>
    <string name="display_name">Display name</string>
    <string name="invalid_password_format">Invalid password format, password have to contrain A–z0–9.@#</string>
    <string name="invalid_display_name_format">Invalid display name</string>
    <string name="email_is_empty">Please enter email</string>
    <string name="password_is_empty">Please enter password</string>
    <string name="display_name_is_empty">please enter display name</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code">. . . .</string>
    <string name="do_not_match">do not match!</string>
    <string name="email_is_used">Email is used</string>
    <string name="create_account_successful">Create account successful</string>
    <string name="create_account_failed">Create account failed</string>
    <string name="send_email_successful">Send email successful</string>
    <string name="time_line">Timeline</string>
    <string name="message">Message</string>
    <string name="friend">Friend</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="search">Search friends…</string>
    <string name="notify_no_result">No results</string>
    <string name="last_message">Last message</string>
    <string name="last_time">Today</string>
    <string name="type_a_message">Type a message</string>
    <string name="view_your_profile">view your profile</string>
    <string name="logout">Logout</string>
    <string name="did_you_want_to_logout">Did you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="get_profile_error">Get profile error!</string>
    <string name="get_message_error">Get message error!</string>
    <string name="view_friends">View friends ></string>
    <string name="view_pictures">View pictures ></string>
    <string name="add_friend">Add friend</string>
    <string name="edit_profile">Edit profile</string>
    <string name="plan">Plan</string>
    <string name="edit">EDIT</string>
    <string name="please_wait">Please wait ....</string>

    <string name="post">POST</string>
    <string name="privacy">Privacy</string>
    <string name="Public">Public</string>
    <string name="what_is_on_your_mind">What\'s on your mind?</string>
    <string name="only_me">Only Me</string>
    <string name="special_friend">Special Friends</string>
    <string name="create_post_failed">Create post failed</string>
    <string name="up_loading">Up loading…</string>
    <string name="title_create_group_chat">Choose people for Group</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="friend_request">Friends request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="friend_request_was_sent">Friend request was sent!</string>
    <string name="friend_request_canceled">Friend request canceled!</string>
    <string name="requested">Requested</string>
    <string name="friend_request_failed">Friend request failed!</string>
    <string name="answer">Answer</string>
    <string name="confirm_friend">Confirm friend</string>
    <string name="push_successful">Push Successful</string>
    <string name="failed">Failed</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    >>>>>>> create friend request
</resources>
