<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_timeline"
        android:icon="@drawable/ic_timeline"
        android:title="@string/time_line"/>

    <item
        android:id="@+id/action_msg"
        android:icon="@drawable/ic_message"
        android:title="@string/message"/>

    <item
        android:id="@+id/action_friend"
        android:icon="@drawable/ic_friend"
        android:title="@string/friend"/>
    <item
        android:id="@+id/action_notifi"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"/>
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_option_horizontal"
        android:title="@string/more"/>
</menu>