<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_privacy_background">

        <TextView
            android:textSize="@dimen/sp_18"
            android:textColor="@color/textViewColorPrimary"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/privacy" />

        <RadioGroup
            android:id="@+id/radio_group_privacy"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/Public" />

            <RadioButton
                android:id="@+id/radio_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/friend" />

            <RadioButton
                android:id="@+id/radio_only_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/only_me"
                android:layout_marginBottom="@dimen/dp_8"/>
        </RadioGroup>
    </LinearLayout>
</layout>