<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myteam.codia.screen.more.MoreViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_8">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginLeft="@dimen/dp_8">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avartar"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginBottom="@dimen/dp_16"
                android:src="@drawable/ic_profile"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintRight_toLeftOf="@+id/txt_name"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/textViewColorPrimary"
                android:textSize="@dimen/sp_18"
                bind:layout_constraintLeft_toRightOf="@+id/img_avartar"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_view_infor"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:text="@string/view_your_profile"
                android:textColor="@color/textViewColorSecondary"
                bind:layout_constraintLeft_toRightOf="@+id/img_avartar"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/txt_name" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/textViewColorSecondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_container" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:onClick="@{()-> viewModel.onEditProfileClick()}">


            <ImageView
                android:id="@+id/img_edit_profile"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_edit"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:text="@string/edit_profile"
                android:textColor="@color/textViewColorPrimary"
                android:textSize="@dimen/sp_18"
                bind:layout_constraintBottom_toBottomOf="@id/img_edit_profile"
                bind:layout_constraintLeft_toRightOf="@+id/img_edit_profile"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="@id/img_edit_profile" />
        </android.support.constraint.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/textViewColorSecondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_container" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:onClick="@{()-> viewModel.onLogoutClick()}">


            <ImageView
                android:id="@+id/img_logout"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_logout"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintLeft_toLeftOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:text="@string/logout"
                android:textColor="@color/textViewColorPrimary"
                android:textSize="@dimen/sp_18"
                bind:layout_constraintBottom_toBottomOf="@id/img_logout"
                bind:layout_constraintLeft_toRightOf="@+id/img_logout"
                bind:layout_constraintRight_toRightOf="parent"
                bind:layout_constraintTop_toTopOf="@id/img_logout" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>
